test_case/rust-lang_rust/53748_416404317_16.rs
compile_fail,E0405\nstruct Foo;\n\nimpl SomeTrait for Foo {} // error: trait `SomeTrait` is not in scope\n